feat: Finished sre bootcamp challenge

--- a/auth_api/node/Dockerfile
+++ b/auth_api/node/Dockerfile
@@ -1,4 +1,7 @@
 FROM node:9-alpine
-
-# App must run on port 8000
-# Add your instructions to dockerize the application
+WORKDIR /node
+COPY package.json /node
+RUN npm install
+COPY . /node
+CMD node index.js
+EXPOSE 8000
