--- a/auth_api/node/package.json
+++ b/auth_api/node/package.json
@@ -24,12 +24,21 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "config": "^1.30.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.1.0",
+    "regenerator-runtime": "^0.13.11",
     "restify": "^7.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
     "nodemon": "^1.17.3",
